--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="manifest" href="./manifest.json">
-    <link rel="shortcut icon" href="./favicon.ico">
-    <title>React App</title>
+    <title></title>
   </head>
-  <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
+  <body id="main">
+    <div class="well">
+      <div id="root"></div>
+    </div>
   </body>
 </html>
